fix: config cors